# paper-searcher

./: .gitignore  README.md  arxiv_searcher.py  config.json  preprocessing.py  pyproject.toml  streamlit_app.py  styles.css
.streamlit/: config.toml
