[project]
name = "paper-searcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=2.4.0",
    "arxivql>=1.3.3",
    "streamlit>=1.52.2",
    "scikit-learn>=1.5,<1.8",
    "scipy<1.17",
    "plotly>=5.18.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
